# ComfyUI-FLUX2MAX-KLEIN9B-API-Nodes

./: .gitignore  README.md  __init__.py  pyproject.toml
nodes/: base.py  config_node.py  flux2flex.py  flux2klein4b.py  flux2klein9b_kv.py  flux2klein_direct.py  flux2max_direct.py  flux2pro.py  flux2pro_preview.py
tests/: conftest.py  test_generate_image.py  test_isolation.py  test_node_registration.py  test_polling.py
